--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <img id="hamburger-icon2" src="./assets/menu-close.svg" class="hamburger-icon hide-in-desktop noSelect"
       alt="hamburger icon"></img>
 
-    <a id="logo" href="/educative/educative-coupon-code.html" class="logo-container noSelect">
+    <a id="logo" href="/" class="logo-container noSelect">
       <img style="width: 18.5vw; margin-left: 5vw; max-width: 260px;"
         src="./assets/educative/educative-offers-logo-mobile.webp"
         class="logo logo-landing-page undraggable-image hide-in-mobile" alt="logo"></img>
